<resources>
    <string name="app_name">HRM</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_topic">Topics</string>
    <string name="title_menu_saved">Bookmarks</string>
    <string name="title_menu_more">More Apps</string>
    <string name="title_menu_rate">Rate This</string>
    <string name="title_menu_about">About</string>
    <string name="logout_confirmation_text">Are you sure want to logout?</string>
    <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="title_info">Info</string>
    <string name="section_topics">Topics</string>
    <string name="section_featured">Featured</string>
    <string name="section_recent">Recent</string>
    <string name="news_type_gallery">Gallery</string>
    <string name="news_type_video">Video</string>
    <string name="news_type_article">Article</string>
    <string name="confirmation">confirmation</string>
    <string name="CANCEL">CANCEL</string>
    <string name="YES">YES</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_bt_login">Login</string>
    <string name="forgot_password">Forget Password</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="title_activity_register">Register Now!</string>
    <string name="skip">Skip</string>
    <string name="popular_on_medium">Featured Posts</string>
    <string name="popular_post">Popular posts</string>
    <string name="title_location_permission">title_location_permission</string>
    <string name="text_location_permission">text_location_permission</string>
    <string name="ok">OK</string>
    <string name="NEXT">NEXT</string>
    <string name="GOT_IT">GOT_IT</string>
    <string name="setting_group_profile">Profile Setting</string>
    <string name="setting_subtitle_name">Name</string>
    <string name="setting_subtitle_email">Email</string>
    <string name="our_email">Admin@gmail.com</string>
    <string name="setting_title_copyright">"Copy@2020 "</string>
    <string name="build_version">10</string>
    <string name="setting_title_term"><![CDATA[Terms&amp; Policies]]></string>
    <string name="email_copied">Copied!</string>
    <string name="pref_title_contact_us">Contact Us</string>
    <string name="developer_email">Admin@gmail.com</string>
    <string name="OK">OK</string>
    <string name="failed_text">Something went wrong</string>
    <string name="failed_when_load">Failed when load data</string>
    <string name="no_internet_text">You are offline</string>
    <string name="no_item">No Item</string>
    <string name="msg_data_loaded">Data loaded</string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Delete successfully</string>
    <string name="msg_copied_clipboard">Text copied to clipboard</string>
    <string name="account_disabled">account is disable!</string>
    <string name="invalid_email_password">invalid email password</string>
    <string name="settings">Settings</string>
    <string name="Passward">Password</string>
    <string name="gps_network_not_enabled">GPS Network Not Enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_user_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first todayFragment</string>
    <string name="hello_second_fragment">Hello second todayFragment. Arg: %1$s</string>

    <string name="start">GOT IT</string>
    <string name="addtasks">Add New Tasks</string>
    <string name="title_activity_task">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank todayFragment</string>
    <string name="title_activity_leaves">Leaves</string>
    <string name="addleaves">Add Leaves</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="leaves">No Leaves Found</string>
    <string name="addleave">Add Leave</string>
    <string name="alltask">All task</string>
    <string name="today">Today</string>
    <string name="nextsevday">Next 7 Days</string>
    <string name="pendtask">Pending Task</string>
    <string name="completed">Completed</string>
    <string name="clockin">Clock In</string>
    <string name="clockout">Clock Out</string>
    <string name="RequestIn">REQUEST CHECKIN</string>
    <string name="RequestOut">REQUEST CHECKOUT</string>
    <string name="save">Save</string>
    <string name="nothanks">No Thanks</string>

    <string name="my_node">Node</string>
    <string name="pedding">Pending</string>
    <string name="RequestLeave">Leave Request</string>
    <string name="current_date">Current Date</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="tue">Tue</string>
    <string name="last_date">30</string>
    <string name="evaluation">Evaluation</string>
    <string name="fetch">Fetch</string>
    <string name="Attendance">Attendance</string>
    <string name="organo">Organogram</string>
    <string name="status">Status</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="peddingleaves">No Pending Leaves</string>
    <string name="Rejectleaves">No Rejected Leaves Found</string>
    <string name="apprleaves">No Approved Leaves Found</string>
    <string name="noattend">No Attendance Found</string>
    <string name="Awaitappr">Awaiting Approval</string>
    <string name="decpend">Decision Pending</string>
    <string name="earlyout">Early-Out</string>
    <string name="late">Lateness</string>
    <string name="absent">Absent</string>
    <string name="pubholy">Public Hoilday</string>
    <string name="presnt">Present</string>
    <string name="name">Name</string>
    <string name="downreport">Download Report</string>
    <string name="onleave">On Leave</string>
    <string name="nodata">No Data Found</string>
    <string name="leavebal">Leave Balance</string>
    <string name="title_activity_user_editactivity">UserEditactivity</string>
    <string name="updateprof">Update Profile</string>
    <string name="savechange">Save Changes</string>
    <string name="reportto">Reporting to:</string>
    <string name="Request">Request</string>
    <string name="noreqt">No Request Found</string>
    <string name="create">Create New</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="tag">Tags</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="viewdetails">View Details</string>
    <string name="title_activity_approval">ApprovalActivity</string>
    <string name="approval">Approvals</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="basicsetup">Basic Setup</string>
    <string name="action">Action</string>
    <string name="holiday">Holiday</string>
    <string name="resume">Resume</string>
    <string name="building">Building</string>
    <string name="createbuild">Create Building</string>
    <string name="skill">Skills</string>
    <string name="shift">Shift</string>
    <string name="close">Close</string>
    <string name="calender">Calender</string>
    <string name="more">More</string>
    <string name="designation">Designation</string>
    <string name="logo">Logo</string>
    <string name="location">Location</string>
    <string name="stadium">Stadium</string>
    <string name="league">League</string>
    <string name="coach">test</string>
    <string name="star">Star</string>
    <string name="myevaluation">My Evaluation</string>
    <string name="department">Departments</string>
    <string name="group">Group</string>
    <string name="workflow">Work Flow</string>
    <string name="tier">Tier</string>
    <string name="role">Roles</string>
    <string name="associate">Associate Screen Role</string>
    <string name="employe">Employee Management</string>
    <string name="pay">Payroll</string>
    <string name="tax">Tax Slabs</string>
    <string name="health">Health Slabs</string>
    <string name="eobi">EOBI Slabs</string>
    <string name="crtax">Create Tax Slabs</string>
    <string name="taxdetails">Tax Slabs Details</string>
    <string name="healthdetails">Health Slabs Details</string>
    <string name="eobidetalis">EOBI Slab Details</string>
    <string name="addhealth">Create Health Slabs</string>
    <string name="addeobi">Create Eobi Slabs</string>
    <string name="step_of">Step %1$d of %2$d</string>
    <string name="personal">Personal Information</string>
    <string name="lorem_ipsum">" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin         \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin "</string>
    <string name="HIDE">Hide</string>
    <string name="username">Name:</string>
    <string name="institute">Institution:</string>
    <string name="graduation">Graduation Year:</string>
    <string name="company">Khazana</string>
    <string name="year">2022</string>
    <string name="apprreq">Approve Request</string>
    <string name="comment">Comment*</string>
    <string name="me">Me</string>
    <string name="mailid">Enter your mail ID</string>
</resources>