<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_5"
    tools:context=".Fragment.Evaluation.EvaluationFragment">

    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:text="@string/evaluation"
        android:textColor="@color/colorApp"
        android:textSize="@dimen/spacing_mlarge"
        android:textStyle="bold">

    </TextView>


    <CheckBox
        android:id="@+id/mucheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/myevaluation"
        android:textAllCaps="true"
        android:textColor="@color/colorApp"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium">




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/evalurecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <TextView
        android:id="@+id/txtno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/noreqt"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>



</RelativeLayout>