<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    tools:context=".Fragment.BasicSetup.SystemHolidaysFragment">


    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:text="@string/holiday"
        android:textColor="@color/colorApp"
        android:textSize="@dimen/spacing_mlarge"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btnaddstdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_bg"
        android:drawableLeft="@drawable/ic_add_black_24dp"
        android:drawablePadding="2dp"
        android:padding="10dp"
        android:text="@string/create"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnaddstdt"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_middle">





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holidayrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small">

            </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <TextView
        android:id="@+id/txtno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/noreqt"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>
</RelativeLayout>