<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/spacing_middle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/ly_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:cardCornerRadius="35dp"
            app:cardBackgroundColor="@color/card1"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/username"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorAppDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:hint="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorAppDark"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/institute"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorAppDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtdescrpt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:hint="@string/company"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorAppDark"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/graduation"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorAppDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtgradua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:hint="@string/year"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorAppDark"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/txtaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/deleteicon"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:layout_gravity="end"
                >

                </ImageView>




            </LinearLayout>

            />


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="15dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txtstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Action"
            android:background="@color/green_400"
            android:paddingHorizontal="20dp"
            android:paddingVertical="@dimen/spacing_medium"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>