<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.khazana.hrm.Fragment.BasicSetup.RolesFragment">

    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:text="@string/role"
        android:textColor="@color/colorApp"
        android:textSize="@dimen/spacing_mlarge"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btnaddskill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_bg"
        android:drawableLeft="@drawable/ic_add_black_24dp"
        android:drawablePadding="2dp"
        android:padding="10dp"
        android:text="@string/create"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnaddskill"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_middle">


        <LinearLayout
            android:id="@+id/lymember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_medium"
            >


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rolesrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/noreqt"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnbuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/spacing_medium"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:padding="10dp"
        android:visibility="gone"
        app:backgroundTint="@color/colorApp"
        app:elevation="2dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_black_24dp"
        tools:ignore="VectorDrawableCompat" />


</RelativeLayout>